# ClubInfoTSE-PremierCours

./: .gitignore  CMakeLists.txt
src/: AnimatedSprite.cpp  AnimatedSprite.h  CMakeLists.txt  DJ.cpp  DJ.h  DJ.hpp  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Utils.cpp  Utils.h  background.cpp  background.h  constantes.h  entite.cpp  entite.h  initSprite.cpp  initSprite.h  initialisation  initialisation.cpp  main.cpp  spriteAnimer.cpp  spriteAnimer.h  utilities.cpp  utilities.h
